--- a/server/package.json
+++ b/server/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "psr-vlogs-project",
+  "name": "server",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -11,6 +11,7 @@
   "dependencies": {
     "express": "^4.19.2",
     "mongoose": "^8.5.2",
-    "nodemon": "^3.1.4"
+    "nodemon": "^3.1.4",
+    "router": "^1.3.8"
   }
 }
